--- a/MyApplication7/app/src/main/res/values/strings.xml
+++ b/MyApplication7/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="image_description">Deskripsi gambar untuk aksesibilitas</string>
+    <string name="card_title">Produk</string>
+    <string name="card_description">deskripsi</string>
 </resources>
